[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "turbulence"
author = "Frederik Rietdijk"
requires = [
    "matplotlib",
    "numexpr",
    "pandas",
    "scipy",
]
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py310

[gh-actions]
python =
    3.9: py39
    3.10: py310

[testenv]
deps =
    nbconvert
    pytest    
commands = pytest -k "not test_notebook" {posargs}
"""
